feat: CORS configuravel por env var e render.yaml para deploy